# Sammon-mapping-and-PCA

./: .gitignore  CMakeLists.txt  readme.md
include/: UIManager.h  camera.h  object.h  read_file.h  shader.h  texture.h  vertex.h
raw/: engine.inf
shader/: light_shader.fs  light_shader.vs  shader.fs
src/: UIManager.cpp  main.cpp  vertex.cpp
